--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -35,20 +36,18 @@ dependencies {
 
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
-
-
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation "com.naver.maps:map-sdk:3.16.2"
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation "com.naver.maps:map-sdk:3.16.2"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-//    apply plugin: 'com.google.gms.google-services'
-//    implementation 'com.google.firebase:firebase-messaging:21.1.0'
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-//    implementation 'com.google.android.material:material:1.9.0'
+    implementation platform('com.google.firebase:firebase-bom:32.8.1')
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
