--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.volley:volley:1.2.0'
 
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
@@ -43,6 +44,7 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
     implementation "com.naver.maps:map-sdk:3.16.2"
+    implementation 'androidx.privacysandbox.tools:tools-core:+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
