--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation 'com.android.volley:volley:1.2.0'
-
+    implementation 'org.greenrobot:eventbus:3.3.1'
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
