--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'org.greenrobot:eventbus:3.3.1'
     implementation 'me.relex:circleindicator:2.1.6'
