--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:theme="@style/Theme.DailyDeliver"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".CustomDialogActivity"
+            android:exported="false" />
 
         <service
             android:name=".Chatting.MyFirebaseMessagingService"
