--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'org.greenrobot:eventbus:3.3.1'
