예외처리 진행중 쓰는부분 디테일액티비티 부분은 어느정도 완료 할것 게시물 좋아요 안좋아요 처리 - 처리하면 위시리스트에 보일수 있게 까지 - 카카오페이나 다른 페이부분 한번 해볼것 - 회원가입시 비번 암호화 처리 완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
+    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
+    implementation("com.google.firebase:firebase-auth")
     implementation "com.naver.maps:map-sdk:3.16.2"
     implementation 'androidx.privacysandbox.tools:tools-core:+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
