--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.CertificateDongNae"
+            android:exported="false" />
+        <activity
             android:name=".profile.KakaoPayWebViewActivity"
             android:exported="false" />
 
